<resources>
    <string name="app_name">TipCalculator-counter</string>
    <string name="numberOfPeople">Number Of People</string>
    <string name="amount">Amount</string>
    <string name="custom">Custom</string>
    <string name="r30">30%</string>
    <string name="r20">20%</string>
    <string name="r10">10%</string>
    <string name="defaultTextView">0</string>
    <string name="calc">Calculate</string>
    <string name="tipAmount">Tip Amount</string>
    <string name="total">Total</string>
    <string name="totalPerPerson">Total Per Person</string>
</resources>
